--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,32 @@
 version: 2
 jobs:
-  build:
+  one:
     docker:
       - image: debian:stretch
 
     steps:
       - checkout
-
       - run:
           name: Greeting
-          command: echo Hello, world.
-
+          command: echo "Hello, world."
       - run:
           name: Print the Current Time
           command: date
+      - run: sleep 25
+   two:
+     docker:
+       - image: debian:stretch
+
+     steps:
+       - checkout
+       - run:
+           name: Kewl Greeting
+           command: echo "Sup lil butt!"
+       - run: sleep 15
+workflow:
+  version: 2
+  one_and_two:
+    jobs:
+      - one
+      - two
+
